--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,7 +159,13 @@ nav:
           - Troubleshooting: node/install/troubleshooting.md
           - FAQ: node/install/node-faq.md
         - Swagger API: node/swagger.md
-        - Testnet: dev/start/testnet.md
+        - Testnet: 
+          - node/testnet.md
+          - Full Sync: node/testnet/testnet-full.md
+          - CPU Mining: node/testnet/cpu-mining.md
+          - Your own chain: node/testnet/mine-your-own-chain.md
+          - Development: node/testnet/testnet-dev.md
+          - Resources: node/testnet/testnet-resources.md
         - Node Wallet: node/wallet.md
         - Resources:
           #- Architecture: node/architecture.md
