--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -345,58 +345,56 @@ nav:
 
   - 💡 ┃  Applications: 
     - uses/index.md
-    - Explore:
-      - Applications: uses/index.md
-      - Live dApps:
-        - DEXs: uses/dex.md
-        - Stablecoins: 
-          - uses/stablecoins.md
-          - SigmaUSD:
-            - uses/sigmausd.md
-            - Examples: uses/sigmausd/examples.md
-            - Mining Incentives: uses/sigmausd/mining-incentives.md
-            - Other Stablecoins: uses/sigmausd/comparison.md
-        - Oracles: uses/oracles.md
-        - NFTs: uses/nft.md
-        - Mixing: uses/mixer.md
-        - CrowdFunding: uses/crowdfunding.md
-        - Gaming: uses/gaming.md
-        - Metaverse: uses/metaverse.md
-
-      #- ErgoRaffle: uses/raffle.md
-      - In Development:
-        - ProfitSharing: uses/profit.md
-        - ICOs: uses/ico.md
-        - Index Coins: uses/index_coins.md
-        - Lending: uses/lending.md
-        - Zero-Knowledge: uses/zk.md
-        - DAOs: uses/dao.md       
-        - Grid Trading: uses/grid_trading.md
-      - Ideas & Discussion:
-        - Buy Back Guarantees: uses/dex-buyback.md
-        - LETS: uses/lets.md
-        - Trustless LETS: uses/trustless-lets.md
-       # - Atomic Swaps: dev/protocol/atomic.md
-        - ErgoData: uses/ErgoData.md
-        - Email Client for Blocked Internet: uses/blocked_web.md
-        - Lotteries: uses/lottery.md
-        - Insurance: uses/insurance.md
-        - Derivatives: uses/deriv.md
-        - P2P Options Contract: uses/p2p_options.md
-        - ChainCash: uses/chaincash.md
-        - Yield Aggregation: uses/yield.md
-        - Micro Credit: dev/scs/microcredit.md
-        - PoW Tokens: uses/PoW_tokens.md
-        - Mutual Credit: uses/mutual_credit.md
-        - Prediction Markets: uses/prediction_markets.md
-        - Perpetual Tokens: uses/perpetual.md
-        - Bonding Curve: uses/bonding.md
-       # - Context Claims: uses/context-claims.md
-      #  - Asset Tokenisation: uses/tokenisation.md
-       # - Privacy: uses/privacy.md
-      #  - Collateral Mining: uses/collateral-mining.md
-      #  - Math Fun: uses/math_fun.md
-     #  - CDBC: uses/cbdc.md
+    - dApps:
+      - DEXs: uses/dex.md
+      - Stablecoins: 
+        - uses/stablecoins.md
+        - SigmaUSD:
+          - uses/sigmausd.md
+          - Examples: uses/sigmausd/examples.md
+          - Mining Incentives: uses/sigmausd/mining-incentives.md
+          - Other Stablecoins: uses/sigmausd/comparison.md
+      - Oracles: uses/oracles.md
+      - NFTs: uses/nft.md
+      - Mixing: uses/mixer.md
+      - CrowdFunding: uses/crowdfunding.md
+      - Gaming: uses/gaming.md
+      - Metaverse: uses/metaverse.md
+      - ErgoRaffle: uses/raffle.md
+    - Infrastructure: 
+      - Rosen Bridge: uses/rosen.md
+    - Ideas:
+      - ProfitSharing: uses/profit.md
+      - ICOs: uses/ico.md
+      - Index Coins: uses/index_coins.md
+      - Lending: uses/lending.md
+      - Zero-Knowledge: uses/zk.md
+      - DAOs: uses/dao.md       
+      - Grid Trading: uses/grid_trading.md
+      - Buy Back Guarantees: uses/dex-buyback.md
+      - LETS: uses/lets.md
+      - Trustless LETS: uses/trustless-lets.md
+      # - Atomic Swaps: dev/protocol/atomic.md
+      - ErgoData: uses/ErgoData.md
+      - Email Client for Blocked Internet: uses/blocked_web.md
+      - Lotteries: uses/lottery.md
+      - Insurance: uses/insurance.md
+      - Derivatives: uses/deriv.md
+      - P2P Options Contract: uses/p2p_options.md
+      - ChainCash: uses/chaincash.md
+      - Yield Aggregation: uses/yield.md
+      - Micro Credit: dev/scs/microcredit.md
+      - PoW Tokens: uses/PoW_tokens.md
+      - Mutual Credit: uses/mutual_credit.md
+      - Prediction Markets: uses/prediction_markets.md
+      - Perpetual Tokens: uses/perpetual.md
+      - Bonding Curve: uses/bonding.md
+      # - Context Claims: uses/context-claims.md
+    #  - Asset Tokenisation: uses/tokenisation.md
+      # - Privacy: uses/privacy.md
+    #  - Collateral Mining: uses/collateral-mining.md
+    #  - Math Fun: uses/math_fun.md
+    #  - CDBC: uses/cbdc.md
 
 
 
