--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -334,8 +334,10 @@ nav:
       - Cryptographic: 
         - crypto.md
         - Sigma Protocols: 
-          - dev/scs/sigma/sigma.md
-          - Verifying Schnorr Signatures: dev/scs/sigma/verifying.md
+          - dev/scs/sigma.md
+          - Schnorr: 
+            - Verifying Schnorr Signatures: dev/scs/sigma/verifying.md
+          - Diffe: dev/scs/sigma/diffe.md
         - Mixer: dev/crypto/mixers.md
         - Ring Signatures:
           - 3-out-of-5 Threshold Signature: dev/scs/sigma/3-out-of-5.md
