Diffie Hellman updates

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -334,9 +334,9 @@ nav:
               - Schnorr: 
                 - dev/scs/sigma/schnorr.md
                 - Verifying Schnorr Signatures: dev/scs/sigma/verifying.md
-              - Diffe: 
+              - Diffie: 
                 - dev/scs/sigma/diffie.md
-                - Mixer: dev/crypto/mixers.md
+                - ZeroJoin: dev/crypto/mixers.md
             - Ring Signatures:
               - 3-out-of-5 Threshold Signature: dev/scs/sigma/3-out-of-5.md
           - sigmastate-interpreter: dev/scs/sigmastate-interpreter.md
