--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -310,6 +310,7 @@ nav:
       - Block: dev/data-model/block.md
       - Wallets:
         - dev/wallets.md
+        - MultiSig: dev/wallet/multisig.md
         - Ledger: dev/wallet/payments/ledger.md
         - Integration: dev/Integration/guide.md
         - Standards:
@@ -387,53 +388,54 @@ nav:
       - Sidechains: 
         - dev/protocol/nipopow/sidechains.md
         - ErgoData: uses/ErgoData.md
-    - dApps:
-      - Exchange:
-        - DEXs: uses/dex.md
-        - NFTs: uses/nft.md
-        - Stablecoins: 
-          - uses/stablecoins.md
-          - SigmaUSD:
-            - uses/sigmausd.md
-            - Examples: uses/sigmausd/examples.md
-            - Mining Incentives: uses/sigmausd/mining-incentives.md
-            - Other Stablecoins: uses/sigmausd/comparison.md
-          - Dexy: uses/dexy.md
-      
-      - Zero-Knowledge:
-        - Zero-Knowledge Treasury: uses/zkt.md
-        - Mixing: uses/mixer.md
-        - Trustless LETS: uses/trustless-lets.md
-      
-      
-      - CrowdFunding: 
-        - uses/crowdfunding.md
-        - ErgoRaffle: uses/raffle.md
-      - Gaming: 
-        - uses/gaming.md
-        - Lotteries: uses/lottery.md
 
-      - P2P:
-        - Monetary Systems:
-          - LETS: uses/lets.md
-          - ChainCash: uses/chaincash.md
-        - Markets: 
-          - Prediction Markets: uses/prediction_markets.md
-        - Financial Instruments:
-          - P2P Options Contract: uses/p2p_options.md
-          - Lending: uses/lending.md
-          - Derivatives: uses/deriv.md
-          - Yield Aggregation: uses/yield.md
-          - Grid Trading: uses/grid_trading.md
-          - Micro Credit: dev/scs/microcredit.md
-          - Mutual Credit: uses/mutual_credit.md
-          - Bonding Curve: uses/bonding.md
-          - Insurance: uses/insurance.md
-      - DAOs: uses/dao.md 
-      - Misc:
-        - ProfitSharing: uses/profit.md
-        - Email Client for Blocked Internet: uses/blocked_web.md
-      - Tokens:
+    - Exchanges:
+      - DEXs: uses/dex.md
+      - NFTs: uses/nft.md
+      - Stablecoins: 
+        - uses/stablecoins.md
+        - SigmaUSD:
+          - uses/sigmausd.md
+          - Examples: uses/sigmausd/examples.md
+          - Mining Incentives: uses/sigmausd/mining-incentives.md
+          - Other Stablecoins: uses/sigmausd/comparison.md
+        - Dexy: uses/dexy.md
+    
+    - Zero-Knowledge:
+      - Zero-Knowledge Treasury: uses/zkt.md
+      - Mixing: uses/mixer.md
+      - Trustless LETS: uses/trustless-lets.md
+    
+    
+    - CrowdFunding: 
+      - uses/crowdfunding.md
+      - ErgoRaffle: uses/raffle.md
+    - Gaming: 
+      - uses/gaming.md
+      - Lotteries: uses/lottery.md
+
+    - P2P:
+      - uses/p2p.md
+      - Monetary Systems:
+        - LETS: uses/lets.md
+        - ChainCash: uses/chaincash.md
+      - Markets: 
+        - Prediction Markets: uses/prediction_markets.md
+      - Financial Instruments:
+        - P2P Options Contract: uses/p2p_options.md
+        - Lending: uses/lending.md
+        - Derivatives: uses/deriv.md
+        - Yield Aggregation: uses/yield.md
+        - Grid Trading: uses/grid_trading.md
+        - Micro Credit: dev/scs/microcredit.md
+        - Mutual Credit: uses/mutual_credit.md
+        - Bonding Curve: uses/bonding.md
+        - Insurance: uses/insurance.md
+    - DAOs: uses/dao.md 
+    - Misc:
+      - ProfitSharing: uses/profit.md
+      - Email Client for Blocked Internet: uses/blocked_web.md
+    - Tokens:
         - ICOs: uses/ico.md
         - Index Coins: uses/index_coins.md
         - PoW Tokens: uses/PoW_tokens.md
